src/components/Game/style.module.scss
.gameContainer {
  position: relative;
  background-color: #427d9d;
  padding: 32px;
  width: 700px;
  min-height: 420px;
  border-radius: 16px;
  border: 3px solid #9bbec8;
  display: flex;
  flex-direction: column;

  h1 {
    text-align: center;
    margin-top: 0;
  }

  h2 {
    margin: 0;
  }

  @media screen and (max-width: 700px) {
    width: unset;
    min-height: unset;
  }

  .categoryName {
    margin: 0;
    text-align: center !important;
  }

  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    h2 {
      text-align: end;
      min-width: 46px;
    }
  }

  .questionContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto 0;

    .question {
      height: 150px;
      display: flex;
      align-items: center;
      @media screen and (max-width: 700px) {
        height: unset;
        min-height: 130px;
      }
    }
  }

  .border {
    border-top: 1px solid #9bbec8;
    margin: 8px -32px;
  }

  .answers {
    min-height: 120px;
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    justify-content: center;
    align-items: center;

    button {
      min-width: 240px;
    }

    .correctAnswer {
      color: black;
      border: 4px solid rgba(9, 207, 9, 0.9);
    }

    .wrongAnswer {
      color: hsl(0deg 0% 60%);
    }

    .chosenWrongAnswer {
      border: 4px solid rgb(170, 6, 6);
      color: black;
    }
  }

  .timesUp {
    color: rgb(170, 6, 6);
  }

  .timesAlmostUp {
    color: rgba(170, 6, 6, 0.5);
  }

  .answersMeta {
    margin-top: auto;

    h2 {
      margin: 0;
    }
  }
}

.nextBtnPlaceholder {
  height: 84px;
}

.nextBtn {
  margin-top: 34px;
  background-color: #164863;
  border: 1px solid #ddf2fd;
  color: white;
  height: 50px;
  width: 140px;
}

.correctAnswerNDifficultyBox {
  display: flex;
  justify-content: space-between;
}

.wrongAnswerNTimeBox {
  display: flex;
  justify-content: space-between;
}

.endGame {
  max-height: 96vh;
  position: relative;
  display: flex;
  flex-direction: column;
  text-align: center;

  .buttonContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 16px;
    margin-left: 8px;
    margin-right: 8px;
  }

  .endGameAnswersBox {
    overflow-x: hidden;
    flex: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .endGameAnswer {
    width: 420px;
    text-align: center;
    margin: 8px 16px;
    display: flex;
    flex-direction: column;
    padding: 8px 16px;
    border: 1px solid #9bbec8;
    border-radius: 20px;
    background-color: #427d9d;
    margin-bottom: 16px;

    @media screen and (max-width: 440px) {
      width: 300px;
      margin: 4px 8px;
    }

    div {
      margin-top: 8px;
      display: flex;
      flex-direction: column;
    }

    p {
      margin: 4px;
    }

    .correctAnswer {
      color: rgba(9, 207, 9, 0.9);
    }
    
    .wrongAnswer {
      color: rgb(170, 6, 6);
    }
  }
}

